--- a/index.html
+++ b/index.html
@@ -9,62 +9,100 @@
 </head>
 
 <body>
-<header>
-<a href="#"></a>
-    <nav>
-    <ul>
-        <li><a href="#">Студия</a></li>
-        <li><a href="#">Портфолио</a></li>
-        <li><a href="#">Контакты</a></li>
-        </ul>
+    <header class="header">
+        <nav>
+            <a class="logo" href="/">
+                Web <span class="design-logo">Studio</span>
+            </a>
+            <ul class="header-link">
+                <li><a href="#Нашипреемущества">Студия</a></li>
+                <li><a href="#Нашакоманда">Портфолио</a></li>
+                <li><a href="#Контакты">Контакты</a></li>
+            </ul>
         </nav>
-<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+380961111111">+38 096 111 11 11</a>
-</header>
-<main>
-<section>
-    <h1>Эффективные решения для вашего бизнеса</h1>
-    <button type="button">Заказать услугу</button>
-</section> 
-<section>
-    <h2>Наши преемущества</h2>
-    <ul>
-        <li>
-            <h2>Внимание к деталям</h2>
-            <span>Идейные соображения, а также начало повседневной работы по формированию позиции.</span>
-        </li>
-        <li>
-            <h2>Пунктуальность</h2>
-            <span>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</span>
-        </li>
-        <li>
-            <h2>Планирование</h2>
-            <span>Равным образом консультация с широким активом в значительной степени обуславливает.</span>
-        </li>
-        <li>
-            <h2>Современные технологии</h2>
-            <span>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</span>
-        </li>
-    </ul>
-</section>
-<section>
-    <h2>Чем мы занимаемся</h2>
-            <img src="/Images/box 1.jpg" alt="сздание труктуры сайтов"> <img src="/Images/box 2.jpg" alt="разработка сайтов под все типы гаджетов"> <img src="/Images/box 3.jpg" alt="оформление сайтов">
-    </section>
-<section>
-    <h2>Наша команда</h2>
-    <p>
-        <img src="" alt="">
-        <send></send>
-        <send></send>
-        <send></send>
-        <send></send>
-    </p>
-</section>
-</main>
-<footer>
-
-</footer>
+    </header>
+    <main>
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
+        <section>
+            <h2 id="Нашипреемущества">Наши преемущества</h2>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <img src="./Images/box1.jpg" alt="сздание труктуры сайтов"> <img src="/Images/box2.jpg"
+                alt="разработка сайтов под все типы гаджетов"> <img src="./Images/box3.jpg" alt="оформление сайтов">
+        </section>
+        <section>
+            <h2 id="Нашакоманда">Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./Images/foto1.jpg" width="270" height="260" alt="Фото Игоря Демяненко">
+                    <span>Игорь Демьяненко</span>
+                    <span>Product Designer</span>
+                </li>
+                <li>
+                    <img src="./Images/foto2.jpg" width="270" height="260" alt="Фото Ольги Репиной">
+                    <span>Ольга Репина</span>
+                    <span>Frontend Developer</span>
+                </li>
+                <li>
+                    <img src="./Images/foto3.jpg" width="270" height="260" alt="Фото Николая Тарасова">
+                    <span>Николай Тарасов</span>
+                    <span>Marketing</span>
+                </li>
+                <li>
+                    <img src="./Images/foto4.jpg" width="270" height="260" alt="Фото Михаила Ермакова">
+                    <span>Михаил Ермаков</span>
+                    <span>UI Designer</span>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <nav>
+            <a class="logo" href="/">
+                Web <span class="design-logo">Studio</span>
+            </a>
+        </nav>
+        <section>
+            <h2 id="Контакты">Контакты</h2>
+            <address>
+                <ul>
+                    <li>
+                        <span>г. Киев, пр-т Леси Украинки, 26</span>
+                    </li>
+                    <li>
+                        <span>info@example.com</span>
+                    </li>
+                    <li>
+                        <span>+38 099 111 11 11</span>
+                    </li>
+                </ul>
+            </address>
+        </section>
+    </footer>
 
 </body>
 
