Зазначив розмір img.

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         </section>
         <section>
             <h2>Чем мы занимаемся</h2>
-            <img src="./Images/box1.jpg" alt="сздание труктуры сайтов"> <img src="/Images/box2.jpg"
-                alt="разработка сайтов под все типы гаджетов"> <img src="./Images/box3.jpg" alt="оформление сайтов">
+            <img src="./Images/box1.jpg" width="370" height="294" alt="сздание труктуры сайтов">
+            <img src="/Images/box2.jpg" width="370" height="294" alt="разработка сайтов под все типы гаджетов">
+            <img src="./Images/box3.jpg" width="370" height="294" alt="оформление сайтов">
         </section>
         <section>
             <h2 id="Нашакоманда">Наша команда</h2>
