--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <img src="./Images/box1.jpg" width="370" height="294" alt="сздание труктуры сайтов">
-            <img src="/Images/box2.jpg" width="370" height="294" alt="разработка сайтов под все типы гаджетов">
+            <img src="./Images/box2.jpg" width="370" height="294" alt="разработка сайтов под все типы гаджетов">
             <img src="./Images/box3.jpg" width="370" height="294" alt="оформление сайтов">
         </section>
         <section>
