змінив назву папок img. Рядок 54-58 - список. змінив <span> на <p>.  В <footer> видалив <nav> та оформив посиланнями.

--- a/index.html
+++ b/index.html
@@ -51,58 +51,56 @@
         </section>
         <section>
             <h2>Чем мы занимаемся</h2>
-            <img src="./Images/box1.jpg" width="370" height="294" alt="сздание труктуры сайтов">
-            <img src="./Images/box2.jpg" width="370" height="294" alt="разработка сайтов под все типы гаджетов">
-            <img src="./Images/box3.jpg" width="370" height="294" alt="оформление сайтов">
+            <ul>
+                <li><img src="./images/box1.jpg" width="370" height="294" alt="сздание труктуры сайтов"></li>
+                <li><img src="./images/box2.jpg" width="370" height="294" alt="разработка сайтов под все типы гаджетов">
+                </li>
+                <li><img src="./images/box3.jpg" width="370" height="294" alt="оформление сайтов"></li>
+            </ul>
         </section>
         <section>
             <h2 id="Нашакоманда">Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./Images/foto1.jpg" width="270" height="260" alt="Фото Игоря Демяненко">
-                    <span>Игорь Демьяненко</span>
-                    <span>Product Designer</span>
+                    <img src="./images/foto1.jpg" width="270" height="260" alt="Фото Игоря Демяненко">
+                    <p>Игорь Демьяненко</p>
+                    <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./Images/foto2.jpg" width="270" height="260" alt="Фото Ольги Репиной">
-                    <span>Ольга Репина</span>
-                    <span>Frontend Developer</span>
+                    <img src="./images/foto2.jpg" width="270" height="260" alt="Фото Ольги Репиной">
+                    <p>Ольга Репина</p>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./Images/foto3.jpg" width="270" height="260" alt="Фото Николая Тарасова">
-                    <span>Николай Тарасов</span>
-                    <span>Marketing</span>
+                    <img src="./images/foto3.jpg" width="270" height="260" alt="Фото Николая Тарасова">
+                    <p>Николай Тарасов</p>
+                    <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./Images/foto4.jpg" width="270" height="260" alt="Фото Михаила Ермакова">
-                    <span>Михаил Ермаков</span>
-                    <span>UI Designer</span>
+                    <img src="./images/foto4.jpg" width="270" height="260" alt="Фото Михаила Ермакова">
+                    <p>Михаил Ермаков</p>
+                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <nav>
-            <a class="logo" href="/">
-                Web <span class="design-logo">Studio</span>
-            </a>
-        </nav>
-        <section>
-            <h2 id="Контакты">Контакты</h2>
-            <address>
-                <ul>
-                    <li>
-                        <span>г. Киев, пр-т Леси Украинки, 26</span>
-                    </li>
-                    <li>
-                        <span>info@example.com</span>
-                    </li>
-                    <li>
-                        <span>+38 099 111 11 11</span>
-                    </li>
-                </ul>
-            </address>
-        </section>
+        <a class="logo" href="/">
+            Web <span class="design-logo">Studio</span>
+        </a>
+        <address>
+            <ul id="Контакты">
+                <li>
+                    <p>г. Киев, пр-т Леси Украинки, 26</p>
+                </li>
+                <li>
+                    <a href="mailto:">info@example.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111">+38 099 111 11 11</a>
+                </li>
+            </ul>
+        </address>
     </footer>
 
 </body>
