--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <address>
             <ul id="Контакты">
                 <li>
+                    <a href="#">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li>
                     <a href="mailto:">info@example.com</a>
